# msgpack-c

./: .gitignore  CMakeLists.txt  Files.cmake  README.md  appveyor.yml  c_master.patch  cpp_master.patch  gen_c_master.sh  gen_cpp_master.sh  make_file_list.sh  makedist.sh  msgpack_build.ps1  msgpack_build.sh
.github/workflows/: coverage.yml  gha.yml
ci/: build_cmake.sh  build_regression.sh
cmake/: FindCJSON.cmake
example/: CMakeLists.txt
example/c/: CMakeLists.txt  jsonconv.c  msgpack_to_json.c
example/c/inputs/: test1.expected  test2  test3  test4.expected
fuzz/: CMakeLists.txt
include/msgpack/: object.h  pack.h  sysdep.h
src/: objectc.c
test/: CMakeLists.txt  buffer.cpp
